[package]
name = "wai"
version = "0.2.0"
edition = "2018"
authors = ["k-nasa <htilcs1115@gmail.com>"]
description = "A simple wasm interpreter"
repository = "https://github.com/k-nasa/wai"
license-file = "LICENSE"
readme = "README.md"
categories = ["wasm", "command-line-interface"]
keywords = ["wasm", "webassembly", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "3.0.0-rc.1"
env_logger = "0.9.0"
log = "0.4.14"

[dev-dependencies]
wast = "38.0.1"
