[package]
name = "wai"
version = "0.2.0"
edition = "2021"
authors = ["k-nasa <htilcs1115@gmail.com>"]
description = "A simple wasm interpreter"
repository = "https://github.com/k-nasa/wai"
license-file = "LICENSE"
readme = "README.md"
categories = ["wasm", "command-line-interface"]
keywords = ["wasm", "webassembly", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.3", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
wast = "40.0.0"
